src/parser.output
Terminals unused in grammar

    D_MAIN


Grammar

    0 $accept: file $end

    1 M: %empty

    2 N: %empty

    3 for_else_N: %empty

    4 file: snippet

    5 snippet: NEWLINE
    6        | stmt
    7        | NEWLINE snippet
    8        | stmt snippet

    9 funcdef: DEF func_name parameters COLON suite
   10        | DEF func_name parameters ARROW_OPER func_ret_type COLON suite
   11        | DEF func_name OPEN_BRACKET CLOSE_BRACKET T COLON suite
   12        | DEF func_name OPEN_BRACKET CLOSE_BRACKET ARROW_OPER func_ret_type T COLON suite

   13 T: %empty

   14 func_name: NAME

   15 func_ret_type: TYPE_HINT
   16              | NONE

   17 parameters: OPEN_BRACKET typedargslist CLOSE_BRACKET
   18           | OPEN_BRACKET SELF COMMA typedargslist CLOSE_BRACKET
   19           | OPEN_BRACKET SELF CLOSE_BRACKET

   20 typedargslist: typedarg
   21              | typedargslist COMMA typedarg

   22 typedarg: tfpdef
   23         | tfpdef EQUAL test

   24 tfpdef: NAME
   25       | NAME COLON TYPE_HINT

   26 stmt: simple_stmt
   27     | compound_stmt

   28 simple_stmt: small_stmt_list SEMI_COLON NEWLINE
   29            | small_stmt_list NEWLINE

   30 small_stmt_list: small_stmt
   31                | small_stmt_list SEMI_COLON small_stmt

   32 small_stmt: expr_stmt
   33           | flow_stmt
   34           | global_stmt

   35 expr_stmt: test ASSIGN_OPERATOR test
   36          | test COLON TYPE_HINT ASSIGN_OPERATOR test
   37          | testlist
   38          | test EQUAL eq_testlist_star_expr_plus
   39          | test COLON TYPE_HINT EQUAL eq_testlist_star_expr_plus
   40          | obj_dec EQUAL eq_testlist_star_expr_plus

   41 obj_dec: test COLON test

   42 eq_testlist_star_expr_plus: test
   43                           | test EQUAL eq_testlist_star_expr_plus

   44 flow_stmt: break_stmt
   45          | continue_stmt
   46          | return_stmt

   47 break_stmt: BREAK

   48 continue_stmt: CONTINUE

   49 return_stmt: RETURN
   50            | RETURN test

   51 global_stmt: GLOBAL NAME
   52            | GLOBAL NAME comma_name_star

   53 comma_name_star: COMMA NAME
   54                | COMMA NAME comma_name_star

   55 compound_stmt: if_stmt
   56              | while_stmt
   57              | for_stmt
   58              | funcdef
   59              | classdef

   60 if_stmt: if_scope if_expr COLON M suite
   61        | if_scope if_expr COLON M suite N else_scope COLON M suite
   62        | if_scope if_expr COLON M suite N nts_star
   63        | if_scope d_expr COLON suite

   64 if_expr: test

   65 d_expr: D_NAME EQUAL_EQUAL STRING

   66 if_scope: IF

   67 else_scope: ELSE

   68 else_if_scope: ELIF

   69 nts_star: else_if_scope if_expr COLON M suite
   70         | else_if_scope if_expr COLON M suite N nts_star
   71         | else_if_scope if_expr COLON M suite N else_scope COLON M suite

   72 while_stmt: while_scope M while_expr COLON M suite
   73           | while_scope M while_expr COLON M suite N else_scope COLON M suite

   74 while_scope: WHILE

   75 while_expr: test

   76 for_stmt: for_scope for_core COLON M suite
   77         | for_scope for_core COLON M suite for_else_N ELSE COLON M suite

   78 for_core: expr IN range_stmt

   79 for_scope: FOR

   80 range_stmt: RANGE OPEN_BRACKET for_test CLOSE_BRACKET
   81           | RANGE OPEN_BRACKET for_test COMMA for_test CLOSE_BRACKET

   82 for_test: test

   83 suite: simple_stmt
   84      | NEWLINE INDENT stmt_plus DEDENT
   85      | NEWLINE INDENT stmt_plus NEWLINE DEDENT

   86 test: or_test

   87 or_test: and_test
   88        | and_test_star OR M and_test

   89 and_test_star: and_test_star OR M and_test
   90              | and_test

   91 and_test: not_test
   92         | not_test_star AND M not_test

   93 not_test_star: not_test_star AND M not_test
   94              | not_test

   95 not_test: NOT not_test
   96         | comparison
   97         | TRUE
   98         | FALSE

   99 comparison: expr
  100           | expr comp_op comparison

  101 comp_op: LESS_THAN
  102        | GREATER_THAN
  103        | EQUAL_EQUAL
  104        | GREATER_THAN_EQUAL
  105        | LESS_THAN_EQUAL
  106        | NOT_EQUAL_ARROW
  107        | NOT_EQUAL
  108        | IN
  109        | NOT IN
  110        | IS
  111        | IS NOT

  112 expr: xor_expr
  113     | xor_expr BIT_OR expr

  114 xor_expr: and_expr
  115         | and_expr BIT_XOR xor_expr

  116 and_expr: shift_expr
  117         | shift_expr BIT_AND and_expr

  118 shift_expr: arith_expr
  119           | arith_expr SHIFT_OPER shift_expr

  120 arith_expr: term
  121           | arith_expr PLUS term
  122           | arith_expr MINUS term

  123 term: factor
  124     | term term_choice factor

  125 term_choice: MULTIPLY
  126            | ATTHERATE
  127            | DIVIDE
  128            | REMAINDER
  129            | FLOOR_DIV_OPER

  130 factor: factor_choice factor
  131       | power

  132 factor_choice: PLUS
  133              | MINUS
  134              | NEGATION

  135 power: atom_expr
  136      | atom_expr POWER_OPERATOR factor

  137 atom_expr: atom
  138          | atom_expr trailer
  139          | atom_expr SQUARE_OPEN S test SQUARE_CLOSE
  140          | atom_expr DOT NAME
  141          | LEN OPEN_BRACKET test CLOSE_BRACKET
  142          | PRINT OPEN_BRACKET test CLOSE_BRACKET
  143          | SELF DOT NAME

  144 S: %empty

  145 atom: OPEN_BRACKET testlist CLOSE_BRACKET
  146     | OPEN_BRACKET CLOSE_BRACKET
  147     | SQUARE_OPEN S testlist SQUARE_CLOSE
  148     | SQUARE_OPEN S SQUARE_CLOSE
  149     | CURLY_OPEN CURLY_CLOSE
  150     | NAME
  151     | NUMBER
  152     | STRING_PLUS
  153     | ATOM_KEYWORDS
  154     | NONE

  155 STRING_PLUS: STRING
  156            | STRING STRING_PLUS

  157 trailer: OPEN_BRACKET CLOSE_BRACKET
  158        | OPEN_BRACKET arglist CLOSE_BRACKET
  159        | OPEN_BRACKET SELF COMMA arglist CLOSE_BRACKET
  160        | OPEN_BRACKET SELF CLOSE_BRACKET

  161 testlist: testlist_list
  162         | testlist_list COMMA

  163 testlist_list: test
  164              | test COLON TYPE_HINT
  165              | testlist_list COMMA test
  166              | testlist_list COMMA test COLON TYPE_HINT

  167 classdef: CLASS class_declare COLON class_body_suite

  168 class_declare: NAME
  169              | NAME OPEN_BRACKET CLOSE_BRACKET
  170              | NAME OPEN_BRACKET argument CLOSE_BRACKET

  171 class_body_suite: NEWLINE INDENT funcdef_plus DEDENT
  172                 | NEWLINE INDENT funcdef_plus NEWLINE DEDENT

  173 funcdef_plus: funcdef
  174             | funcdef_plus funcdef

  175 arglist: argument_list

  176 argument_list: argument
  177              | argument COMMA argument_list

  178 argument: test
  179         | test EQUAL test

  180 stmt_plus: stmt
  181          | stmt stmt_plus


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    RANGE <elem> (258) 80 81
    NEWLINE <elem> (259) 5 7 28 29 84 85 171 172
    INDENT <elem> (260) 84 85 171 172
    DEDENT <elem> (261) 84 85 171 172
    ASSIGN_OPERATOR <elem> (262) 35 36
    POWER_OPERATOR <elem> (263) 136
    SHIFT_OPER <elem> (264) 119
    FLOOR_DIV_OPER <elem> (265) 129
    ARROW_OPER <elem> (266) 10 12
    TYPE_HINT <elem> (267) 15 25 36 39 164 166
    NAME <elem> (268) 14 24 25 51 52 53 54 140 143 150 168 169 170
    IF <elem> (269) 66
    ELSE <elem> (270) 67 77
    ELIF <elem> (271) 68
    WHILE <elem> (272) 74
    FOR <elem> (273) 79
    IN <elem> (274) 78 108 109
    AND <elem> (275) 92 93
    OR <elem> (276) 88 89
    NOT <elem> (277) 95 109 111
    BREAK <elem> (278) 47
    CONTINUE <elem> (279) 48
    RETURN <elem> (280) 49 50
    CLASS <elem> (281) 167
    DEF <elem> (282) 9 10 11 12
    GLOBAL <elem> (283) 51 52
    ATOM_KEYWORDS <elem> (284) 153
    STRING <elem> (285) 65 155 156
    OPEN_BRACKET <elem> (286) 11 12 17 18 19 80 81 141 142 145 146 157 158 159 160 169 170
    CLOSE_BRACKET <elem> (287) 11 12 17 18 19 80 81 141 142 145 146 157 158 159 160 169 170
    EQUAL <elem> (288) 23 38 39 40 43 179
    SEMI_COLON <elem> (289) 28 31
    COLON <elem> (290) 9 10 11 12 25 36 39 41 60 61 62 63 69 70 71 72 73 76 77 164 166 167
    COMMA <elem> (291) 18 21 53 54 81 159 162 165 166 177
    PLUS <elem> (292) 121 132
    MINUS <elem> (293) 122 133
    MULTIPLY <elem> (294) 125
    DIVIDE <elem> (295) 127
    REMAINDER <elem> (296) 128
    ATTHERATE <elem> (297) 126
    NEGATION <elem> (298) 134
    BIT_AND <elem> (299) 117
    BIT_OR <elem> (300) 113
    BIT_XOR <elem> (301) 115
    DOT <elem> (302) 140 143
    CURLY_OPEN <elem> (303) 149
    CURLY_CLOSE <elem> (304) 149
    SQUARE_OPEN <elem> (305) 139 147 148
    SQUARE_CLOSE <elem> (306) 139 147 148
    LESS_THAN <elem> (307) 101
    GREATER_THAN <elem> (308) 102
    EQUAL_EQUAL <elem> (309) 65 103
    GREATER_THAN_EQUAL <elem> (310) 104
    LESS_THAN_EQUAL <elem> (311) 105
    NOT_EQUAL_ARROW <elem> (312) 106
    NOT_EQUAL <elem> (313) 107
    IS <elem> (314) 110 111
    TRUE <elem> (315) 97
    FALSE <elem> (316) 98
    NUMBER <elem> (317) 151
    NONE <elem> (318) 16 154
    LEN <elem> (319) 141
    PRINT <elem> (320) 142
    D_MAIN <elem> (321)
    D_NAME <elem> (322) 65
    SELF <elem> (323) 18 19 143 159 160


Nonterminals, with rules where they appear

    $accept (69)
        on left: 0
    M <elem> (70)
        on left: 1
        on right: 60 61 62 69 70 71 72 73 76 77 88 89 92 93
    N <elem> (71)
        on left: 2
        on right: 61 62 70 71 73
    for_else_N <elem> (72)
        on left: 3
        on right: 77
    file <elem> (73)
        on left: 4
        on right: 0
    snippet <elem> (74)
        on left: 5 6 7 8
        on right: 4 7 8
    funcdef <elem> (75)
        on left: 9 10 11 12
        on right: 58 173 174
    T <elem> (76)
        on left: 13
        on right: 11 12
    func_name <elem> (77)
        on left: 14
        on right: 9 10 11 12
    func_ret_type <elem> (78)
        on left: 15 16
        on right: 10 12
    parameters <elem> (79)
        on left: 17 18 19
        on right: 9 10
    typedargslist <elem> (80)
        on left: 20 21
        on right: 17 18 21
    typedarg <elem> (81)
        on left: 22 23
        on right: 20 21
    tfpdef <elem> (82)
        on left: 24 25
        on right: 22 23
    stmt <elem> (83)
        on left: 26 27
        on right: 6 8 180 181
    simple_stmt <elem> (84)
        on left: 28 29
        on right: 26 83
    small_stmt_list <elem> (85)
        on left: 30 31
        on right: 28 29 31
    small_stmt <elem> (86)
        on left: 32 33 34
        on right: 30 31
    expr_stmt <elem> (87)
        on left: 35 36 37 38 39 40
        on right: 32
    obj_dec <elem> (88)
        on left: 41
        on right: 40
    eq_testlist_star_expr_plus <elem> (89)
        on left: 42 43
        on right: 38 39 40 43
    flow_stmt <elem> (90)
        on left: 44 45 46
        on right: 33
    break_stmt <elem> (91)
        on left: 47
        on right: 44
    continue_stmt <elem> (92)
        on left: 48
        on right: 45
    return_stmt <elem> (93)
        on left: 49 50
        on right: 46
    global_stmt <elem> (94)
        on left: 51 52
        on right: 34
    comma_name_star <elem> (95)
        on left: 53 54
        on right: 52 54
    compound_stmt <elem> (96)
        on left: 55 56 57 58 59
        on right: 27
    if_stmt <elem> (97)
        on left: 60 61 62 63
        on right: 55
    if_expr <elem> (98)
        on left: 64
        on right: 60 61 62 69 70 71
    d_expr <elem> (99)
        on left: 65
        on right: 63
    if_scope <elem> (100)
        on left: 66
        on right: 60 61 62 63
    else_scope <elem> (101)
        on left: 67
        on right: 61 71 73
    else_if_scope <elem> (102)
        on left: 68
        on right: 69 70 71
    nts_star <elem> (103)
        on left: 69 70 71
        on right: 62 70
    while_stmt <elem> (104)
        on left: 72 73
        on right: 56
    while_scope <elem> (105)
        on left: 74
        on right: 72 73
    while_expr <elem> (106)
        on left: 75
        on right: 72 73
    for_stmt <elem> (107)
        on left: 76 77
        on right: 57
    for_core <elem> (108)
        on left: 78
        on right: 76 77
    for_scope <elem> (109)
        on left: 79
        on right: 76 77
    range_stmt <elem> (110)
        on left: 80 81
        on right: 78
    for_test <elem> (111)
        on left: 82
        on right: 80 81
    suite <elem> (112)
        on left: 83 84 85
        on right: 9 10 11 12 60 61 62 63 69 70 71 72 73 76 77
    test <elem> (113)
        on left: 86
        on right: 23 35 36 38 39 41 42 43 50 64 75 82 139 141 142 163 164 165 166 178 179
    or_test <elem> (114)
        on left: 87 88
        on right: 86
    and_test_star <elem> (115)
        on left: 89 90
        on right: 88 89
    and_test <elem> (116)
        on left: 91 92
        on right: 87 88 89 90
    not_test_star <elem> (117)
        on left: 93 94
        on right: 92 93
    not_test <elem> (118)
        on left: 95 96 97 98
        on right: 91 92 93 94 95
    comparison <elem> (119)
        on left: 99 100
        on right: 96 100
    comp_op <elem> (120)
        on left: 101 102 103 104 105 106 107 108 109 110 111
        on right: 100
    expr <elem> (121)
        on left: 112 113
        on right: 78 99 100 113
    xor_expr <elem> (122)
        on left: 114 115
        on right: 112 113 115
    and_expr <elem> (123)
        on left: 116 117
        on right: 114 115 117
    shift_expr <elem> (124)
        on left: 118 119
        on right: 116 117 119
    arith_expr <elem> (125)
        on left: 120 121 122
        on right: 118 119 121 122
    term <elem> (126)
        on left: 123 124
        on right: 120 121 122 124
    term_choice <elem> (127)
        on left: 125 126 127 128 129
        on right: 124
    factor <elem> (128)
        on left: 130 131
        on right: 123 124 130 136
    factor_choice <elem> (129)
        on left: 132 133 134
        on right: 130
    power <elem> (130)
        on left: 135 136
        on right: 131
    atom_expr <elem> (131)
        on left: 137 138 139 140 141 142 143
        on right: 135 136 138 139 140
    S <elem> (132)
        on left: 144
        on right: 139 147 148
    atom <elem> (133)
        on left: 145 146 147 148 149 150 151 152 153 154
        on right: 137
    STRING_PLUS <elem> (134)
        on left: 155 156
        on right: 152 156
    trailer <elem> (135)
        on left: 157 158 159 160
        on right: 138
    testlist <elem> (136)
        on left: 161 162
        on right: 37 145 147
    testlist_list <elem> (137)
        on left: 163 164 165 166
        on right: 161 162 165 166
    classdef <elem> (138)
        on left: 167
        on right: 59
    class_declare <elem> (139)
        on left: 168 169 170
        on right: 167
    class_body_suite <elem> (140)
        on left: 171 172
        on right: 167
    funcdef_plus <elem> (141)
        on left: 173 174
        on right: 171 172 174
    arglist <elem> (142)
        on left: 175
        on right: 158 159
    argument_list <elem> (143)
        on left: 176 177
        on right: 175 177
    argument <elem> (144)
        on left: 178 179
        on right: 170 176 177
    stmt_plus <elem> (145)
        on left: 180 181
        on right: 84 85 181


State 0

    0 $accept: . file $end

    NEWLINE        shift, and go to state 1
    NAME           shift, and go to state 2
    IF             shift, and go to state 3
    WHILE          shift, and go to state 4
    FOR            shift, and go to state 5
    NOT            shift, and go to state 6
    BREAK          shift, and go to state 7
    CONTINUE       shift, and go to state 8
    RETURN         shift, and go to state 9
    CLASS          shift, and go to state 10
    DEF            shift, and go to state 11
    GLOBAL         shift, and go to state 12
    ATOM_KEYWORDS  shift, and go to state 13
    STRING         shift, and go to state 14
    OPEN_BRACKET   shift, and go to state 15
    PLUS           shift, and go to state 16
    MINUS          shift, and go to state 17
    NEGATION       shift, and go to state 18
    CURLY_OPEN     shift, and go to state 19
    SQUARE_OPEN    shift, and go to state 20
    TRUE           shift, and go to state 21
    FALSE          shift, and go to state 22
    NUMBER         shift, and go to state 23
    NONE           shift, and go to state 24
    LEN            shift, and go to state 25
    PRINT          shift, and go to state 26
    SELF           shift, and go to state 27

    file             go to state 28
    snippet          go to state 29
    funcdef          go to state 30
    stmt             go to state 31
    simple_stmt      go to state 32
    small_stmt_list  go to state 33
    small_stmt       go to state 34
    expr_stmt        go to state 35
    obj_dec          go to state 36
    flow_stmt        go to state 37
    break_stmt       go to state 38
    continue_stmt    go to state 39
    return_stmt      go to state 40
    global_stmt      go to state 41
    compound_stmt    go to state 42
    if_stmt          go to state 43
    if_scope         go to state 44
    while_stmt       go to state 45
    while_scope      go to state 46
    for_stmt         go to state 47
    for_scope        go to state 48
    test             go to state 49
    or_test          go to state 50
    and_test_star    go to state 51
    and_test         go to state 52
    not_test_star    go to state 53
    not_test         go to state 54
    comparison       go to state 55
    expr             go to state 56
    xor_expr         go to state 57
    and_expr         go to state 58
    shift_expr       go to state 59
    arith_expr       go to state 60
    term             go to state 61
    factor           go to state 62
    factor_choice    go to state 63
    power            go to state 64
    atom_expr        go to state 65
    atom             go to state 66
    STRING_PLUS      go to state 67
    testlist         go to state 68
    testlist_list    go to state 69
    classdef         go to state 70


State 1

    5 snippet: NEWLINE .
    7        | NEWLINE . snippet

    NEWLINE        shift, and go to state 1
    NAME           shift, and go to state 2
    IF             shift, and go to state 3
    WHILE          shift, and go to state 4
    FOR            shift, and go to state 5
    NOT            shift, and go to state 6
    BREAK          shift, and go to state 7
    CONTINUE       shift, and go to state 8
    RETURN         shift, and go to state 9
    CLASS          shift, and go to state 10
    DEF            shift, and go to state 11
    GLOBAL         shift, and go to state 12
    ATOM_KEYWORDS  shift, and go to state 13
    STRING         shift, and go to state 14
    OPEN_BRACKET   shift, and go to state 15
    PLUS           shift, and go to state 16
    MINUS          shift, and go to state 17
    NEGATION       shift, and go to state 18
    CURLY_OPEN     shift, and go to state 19
    SQUARE_OPEN    shift, and go to state 20
    TRUE           shift, and go to state 21
    FALSE          shift, and go to state 22
    NUMBER         shift, and go to state 23
    NONE           shift, and go to state 24
    LEN            shift, and go to state 25
    PRINT          shift, and go to state 26
    SELF           shift, and go to state 27

    $default  reduce using rule 5 (snippet)

    snippet          go to state 71
    funcdef          go to state 30
    stmt             go to state 31
    simple_stmt      go to state 32
    small_stmt_list  go to state 33
    small_stmt       go to state 34
    expr_stmt        go to state 35
    obj_dec          go to state 36
    flow_stmt        go to state 37
    break_stmt       go to state 38
    continue_stmt    go to state 39
    return_stmt      go to state 40
    global_stmt      go to state 41
    compound_stmt    go to state 42
    if_stmt          go to state 43
    if_scope         go to state 44
    while_stmt       go to state 45
    while_scope      go to state 46
    for_stmt         go to state 47
    for_scope        go to state 48
    test             go to state 49
    or_test          go to state 50
    and_test_star    go to state 51
    and_test         go to state 52
    not_test_star    go to state 53
    not_test         go to state 54
    comparison       go to state 55
    expr             go to state 56
    xor_expr         go to state 57
    and_expr         go to state 58
    shift_expr       go to state 59
    arith_expr       go to state 60
    term             go to state 61
    factor           go to state 62
    factor_choice    go to state 63
    power            go to state 64
    atom_expr        go to state 65
    atom             go to state 66
    STRING_PLUS      go to state 67
    testlist         go to state 68
    testlist_list    go to state 69
    classdef         go to state 70


State 2

  150 atom: NAME .

    $default  reduce using rule 150 (atom)


State 3

   66 if_scope: IF .

    $default  reduce using rule 66 (if_scope)


State 4

   74 while_scope: WHILE .

    $default  reduce using rule 74 (while_scope)


State 5

   79 for_scope: FOR .

    $default  reduce using rule 79 (for_scope)


State 6

   95 not_test: NOT . not_test

    NAME           shift, and go to state 2
    NOT            shift, and go to state 6
    ATOM_KEYWORDS  shift, and go to state 13
    STRING         shift, and go to state 14
    OPEN_BRACKET   shift, and go to state 15
    PLUS           shift, and go to state 16
    MINUS          shift, and go to state 17
    NEGATION       shift, and go to state 18
    CURLY_OPEN     shift, and go to state 19
    SQUARE_OPEN    shift, and go to state 20
    TRUE           shift, and go to state 21
    FALSE          shift, and go to state 22
    NUMBER         shift, and go to state 23
    NONE           shift, and go to state 24
    LEN            shift, and go to state 25
    PRINT          shift, and go to state 26
    SELF           shift, and go to state 27

    not_test       go to state 72
    comparison     go to state 55
    expr           go to state 56
    xor_expr       go to state 57
    and_expr       go to state 58
    shift_expr     go to state 59
    arith_expr     go to state 60
    term           go to state 61
    factor         go to state 62
    factor_choice  go to state 63
    power          go to state 64
    atom_expr      go to state 65
    atom           go to state 66
    STRING_PLUS    go to state 67


State 7

   47 break_stmt: BREAK .

    $default  reduce using rule 47 (break_stmt)


State 8

   48 continue_stmt: CONTINUE .

    $default  reduce using rule 48 (continue_stmt)


State 9

   49 return_stmt: RETURN .
   50            | RETURN . test

    NAME           shift, and go to state 2
    NOT            shift, and go to state 6
    ATOM_KEYWORDS  shift, and go to state 13
    STRING         shift, and go to state 14
    OPEN_BRACKET   shift, and go to state 15
    PLUS           shift, and go to state 16
    MINUS          shift, and go to state 17
    NEGATION       shift, and go to state 18
    CURLY_OPEN     shift, and go to state 19
    SQUARE_OPEN    shift, and go to state 20
    TRUE           shift, and go to state 21
    FALSE          shift, and go to state 22
    NUMBER         shift, and go to state 23
    NONE           shift, and go to state 24
    LEN            shift, and go to state 25
    PRINT          shift, and go to state 26
    SELF           shift, and go to state 27

    $default  reduce using rule 49 (return_stmt)

    test           go to state 73
    or_test        go to state 50
    and_test_star  go to state 51
    and_test       go to state 52
    not_test_star  go to state 53
    not_test       go to state 54
    comparison     go to state 55
    expr           go to state 56
    xor_expr       go to state 57
    and_expr       go to state 58
    shift_expr     go to state 59
    arith_expr     go to state 60
    term           go to state 61
    factor         go to state 62
    factor_choice  go to state 63
    power          go to state 64
    atom_expr      go to state 65
    atom           go to state 66
    STRING_PLUS    go to state 67


State 10

  167 classdef: CLASS . class_declare COLON class_body_suite

    NAME  shift, and go to state 74

    class_declare  go to state 75


State 11

    9 funcdef: DEF . func_name parameters COLON suite
   10        | DEF . func_name parameters ARROW_OPER func_ret_type COLON suite
   11        | DEF . func_name OPEN_BRACKET CLOSE_BRACKET T COLON suite
   12        | DEF . func_name OPEN_BRACKET CLOSE_BRACKET ARROW_OPER func_ret_type T COLON suite

    NAME  shift, and go to state 76

    func_name  go to state 77


State 12

   51 global_stmt: GLOBAL . NAME
   52            | GLOBAL . NAME comma_name_star

    NAME  shift, and go to state 78


State 13

  153 atom: ATOM_KEYWORDS .

    $default  reduce using rule 153 (atom)


State 14

  155 STRING_PLUS: STRING .
  156            | STRING . STRING_PLUS

    STRING  shift, and go to state 14

    $default  reduce using rule 155 (STRING_PLUS)

    STRING_PLUS  go to state 79


State 15

  145 atom: OPEN_BRACKET . testlist CLOSE_BRACKET
  146     | OPEN_BRACKET . CLOSE_BRACKET

    NAME           shift, and go to state 2
    NOT            shift, and go to state 6
    ATOM_KEYWORDS  shift, and go to state 13
    STRING         shift, and go to state 14
    OPEN_BRACKET   shift, and go to state 15
    CLOSE_BRACKET  shift, and go to state 80
    PLUS           shift, and go to state 16
    MINUS          shift, and go to state 17
    NEGATION       shift, and go to state 18
    CURLY_OPEN     shift, and go to state 19
    SQUARE_OPEN    shift, and go to state 20
    TRUE           shift, and go to state 21
    FALSE          shift, and go to state 22
    NUMBER         shift, and go to state 23
    NONE           shift, and go to state 24
    LEN            shift, and go to state 25
    PRINT          shift, and go to state 26
    SELF           shift, and go to state 27

    test           go to state 81
    or_test        go to state 50
    and_test_star  go to state 51
    and_test       go to state 52
    not_test_star  go to state 53
    not_test       go to state 54
    comparison     go to state 55
    expr           go to state 56
    xor_expr       go to state 57
    and_expr       go to state 58
    shift_expr     go to state 59
    arith_expr     go to state 60
    term           go to state 61
    factor         go to state 62
    factor_choice  go to state 63
    power          go to state 64
    atom_expr      go to state 65
    atom           go to state 66
    STRING_PLUS    go to state 67
    testlist       go to state 82
    testlist_list  go to state 69


State 16

  132 factor_choice: PLUS .

    $default  reduce using rule 132 (factor_choice)


State 17

  133 factor_choice: MINUS .

    $default  reduce using rule 133 (factor_choice)


State 18

  134 factor_choice: NEGATION .

    $default  reduce using rule 134 (factor_choice)


State 19

  149 atom: CURLY_OPEN . CURLY_CLOSE

    CURLY_CLOSE  shift, and go to state 83


State 20

  147 atom: SQUARE_OPEN . S testlist SQUARE_CLOSE
  148     | SQUARE_OPEN . S SQUARE_CLOSE

    $default  reduce using rule 144 (S)

    S  go to state 84


State 21

   97 not_test: TRUE .

    $default  reduce using rule 97 (not_test)


State 22

   98 not_test: FALSE .

    $default  reduce using rule 98 (not_test)


State 23

  151 atom: NUMBER .

    $default  reduce using rule 151 (atom)


State 24

  154 atom: NONE .

    $default  reduce using rule 154 (atom)


State 25

  141 atom_expr: LEN . OPEN_BRACKET test CLOSE_BRACKET

    OPEN_BRACKET  shift, and go to state 85


State 26

  142 atom_expr: PRINT . OPEN_BRACKET test CLOSE_BRACKET

    OPEN_BRACKET  shift, and go to state 86


State 27

  143 atom_expr: SELF . DOT NAME

    DOT  shift, and go to state 87


State 28

    0 $accept: file . $end

    $end  shift, and go to state 88


State 29

    4 file: snippet .

    $default  reduce using rule 4 (file)


State 30

   58 compound_stmt: funcdef .

    $default  reduce using rule 58 (compound_stmt)


State 31

    6 snippet: stmt .
    8        | stmt . snippet

    NEWLINE        shift, and go to state 1
    NAME           shift, and go to state 2
    IF             shift, and go to state 3
    WHILE          shift, and go to state 4
    FOR            shift, and go to state 5
    NOT            shift, and go to state 6
    BREAK          shift, and go to state 7
    CONTINUE       shift, and go to state 8
    RETURN         shift, and go to state 9
    CLASS          shift, and go to state 10
    DEF            shift, and go to state 11
    GLOBAL         shift, and go to state 12
    ATOM_KEYWORDS  shift, and go to state 13
    STRING         shift, and go to state 14
    OPEN_BRACKET   shift, and go to state 15
    PLUS           shift, and go to state 16
    MINUS          shift, and go to state 17
    NEGATION       shift, and go to state 18
    CURLY_OPEN     shift, and go to state 19
    SQUARE_OPEN    shift, and go to state 20
    TRUE           shift, and go to state 21
    FALSE          shift, and go to state 22
    NUMBER         shift, and go to state 23
    NONE           shift, and go to state 24
    LEN            shift, and go to state 25
    PRINT          shift, and go to state 26
    SELF           shift, and go to state 27

    $default  reduce using rule 6 (snippet)

    snippet          go to state 89
    funcdef          go to state 30
    stmt             go to state 31
    simple_stmt      go to state 32
    small_stmt_list  go to state 33
    small_stmt       go to state 34
    expr_stmt        go to state 35
    obj_dec          go to state 36
    flow_stmt        go to state 37
    break_stmt       go to state 38
    continue_stmt    go to state 39
    return_stmt      go to state 40
    global_stmt      go to state 41
    compound_stmt    go to state 42
    if_stmt          go to state 43
    if_scope         go to state 44
    while_stmt       go to state 45
    while_scope      go to state 46
    for_stmt         go to state 47
    for_scope        go to state 48
    test             go to state 49
    or_test          go to state 50
    and_test_star    go to state 51
    and_test         go to state 52
    not_test_star    go to state 53
    not_test         go to state 54
    comparison       go to state 55
    expr             go to state 56
    xor_expr         go to state 57
    and_expr         go to state 58
    shift_expr       go to state 59
    arith_expr       go to state 60
    term             go to state 61
    factor           go to state 62
    factor_choice    go to state 63
    power            go to state 64
    atom_expr        go to state 65
    atom             go to state 66
    STRING_PLUS      go to state 67
    testlist         go to state 68
    testlist_list    go to state 69
    classdef         go to state 70


State 32

   26 stmt: simple_stmt .

    $default  reduce using rule 26 (stmt)


State 33

   28 simple_stmt: small_stmt_list . SEMI_COLON NEWLINE
   29            | small_stmt_list . NEWLINE
   31 small_stmt_list: small_stmt_list . SEMI_COLON small_stmt

    NEWLINE     shift, and go to state 90
    SEMI_COLON  shift, and go to state 91


State 34

   30 small_stmt_list: small_stmt .

    $default  reduce using rule 30 (small_stmt_list)


State 35

   32 small_stmt: expr_stmt .

    $default  reduce using rule 32 (small_stmt)


State 36

   40 expr_stmt: obj_dec . EQUAL eq_testlist_star_expr_plus

    EQUAL  shift, and go to state 92


State 37

   33 small_stmt: flow_stmt .

    $default  reduce using rule 33 (small_stmt)


State 38

   44 flow_stmt: break_stmt .

    $default  reduce using rule 44 (flow_stmt)


State 39

   45 flow_stmt: continue_stmt .

    $default  reduce using rule 45 (flow_stmt)


State 40

   46 flow_stmt: return_stmt .

    $default  reduce using rule 46 (flow_stmt)


State 41

   34 small_stmt: global_stmt .

    $default  reduce using rule 34 (small_stmt)


State 42

   27 stmt: compound_stmt .

    $default  reduce using rule 27 (stmt)


State 43

   55 compound_stmt: if_stmt .

    $default  reduce using rule 55 (compound_stmt)


State 44

   60 if_stmt: if_scope . if_expr COLON M suite
   61        | if_scope . if_expr COLON M suite N else_scope COLON M suite
   62        | if_scope . if_expr COLON M suite N nts_star
   63        | if_scope . d_expr COLON suite

    NAME           shift, and go to state 2
    NOT            shift, and go to state 6
    ATOM_KEYWORDS  shift, and go to state 13
    STRING         shift, and go to state 14
    OPEN_BRACKET   shift, and go to state 15
    PLUS           shift, and go to state 16
    MINUS          shift, and go to state 17
    NEGATION       shift, and go to state 18
    CURLY_OPEN     shift, and go to state 19
    SQUARE_OPEN    shift, and go to state 20
    TRUE           shift, and go to state 21
    FALSE          shift, and go to state 22
    NUMBER         shift, and go to state 23
    NONE           shift, and go to state 24
    LEN            shift, and go to state 25
    PRINT          shift, and go to state 26
    D_NAME         shift, and go to state 93
    SELF           shift, and go to state 27

    if_expr        go to state 94
    d_expr         go to state 95
    test           go to state 96
    or_test        go to state 50
    and_test_star  go to state 51
    and_test       go to state 52
    not_test_star  go to state 53
    not_test       go to state 54
    comparison     go to state 55
    expr           go to state 56
    xor_expr       go to state 57
    and_expr       go to state 58
    shift_expr     go to state 59
    arith_expr     go to state 60
    term           go to state 61
    factor         go to state 62
    factor_choice  go to state 63
    power          go to state 64
    atom_expr      go to state 65
    atom           go to state 66
    STRING_PLUS    go to state 67


State 45

   56 compound_stmt: while_stmt .

    $default  reduce using rule 56 (compound_stmt)


State 46

   72 while_stmt: while_scope . M while_expr COLON M suite
   73           | while_scope . M while_expr COLON M suite N else_scope COLON M suite

    $default  reduce using rule 1 (M)

    M  go to state 97


State 47

   57 compound_stmt: for_stmt .

    $default  reduce using rule 57 (compound_stmt)


State 48

   76 for_stmt: for_scope . for_core COLON M suite
   77         | for_scope . for_core COLON M suite for_else_N ELSE COLON M suite
